@@ -6,6 +6,7 @@ n/a - April 12, 2004
 	  be mounted at boottime.  Should not affect 2.4 systems
 	* Since all entries are added to /etc/mtab, we should not require
 	  the NO_FS variable.  It has been removed from mountfs
+	* Added the udev script into the contrib directory, submitted by Zack
 
 2.0.3 - April 8, 2004
 
